# bbc6minute

./: .gitignore  CMakeLists.txt  buildScript.sh
Src/: main.cpp
Src/Courses/Headers/: currentCourse.hpp  missingFiles.hpp
Src/Courses/Sources/: currentCourse.cpp  missingFiles.cpp
Src/Courses/Unitless/Headers/: mediaAndTranscriptDownloader.hpp  mediasAndTranscriptsPagesUrlAddressesExtracter.hpp  mediasAndTranscriptsPagesUrlAddressesPageDownloader.hpp  mediasAndTranscriptsUrlAddressesPagesDownloader.hpp  unitless.hpp
Src/Courses/Unitless/Sources/: mediaAndTranscriptDownloader.cpp  mediasAndTranscriptsPagesUrlAddressesExtracter.cpp  mediasAndTranscriptsPagesUrlAddressesPageDownloader.cpp  mediasAndTranscriptsUrlAddressesPagesDownloader.cpp  unitless.cpp
Src/Courses/WithUnits/Headers/: currentUnit.hpp  currentUnitDownloadCentrePageDownloader.hpp  currentUnitMediasAndTranscriptsDownloader.hpp  currentUnitVocabularyAndGrammarReferenceDownloader.hpp  downloadCentrePageMediasAndTranscriptsUrlAddressesExtracter.hpp
Src/Courses/WithUnits/Sources/: currentUnit.cpp  currentUnitDownloadCentrePageDownloader.cpp  currentUnitMediasAndTranscriptsDownloader.cpp  currentUnitVocabularyAndGrammarReferenceDownloader.cpp  downloadCentrePageMediasAndTranscriptsUrlAddressesExtracter.cpp
Src/Courses/WithUnits/header/: currentUnit.hpp
Src/Courses/WithUnits/source/: currentUnit.cpp  currentUnitVocabularyAndGrammarReferenceDownloader.cpp
Src/Courses/header/: pause.hpp
Src/Courses/source/: pause.cpp
Src/Tests/: CMakeLists.txt  gTestsMain.cpp
Src/Tests/Sources/: unitlessTests.cpp
Src/Utils/Headers/: downloader.hpp  missingFiles.hpp  pause.hpp  utils.hpp
Src/Utils/Sources/: downloader.cpp  missingFiles.cpp  pause.cpp  utils.cpp
src/: main.cpp
src/header/: common.h  common.hpp  currentCourse.hpp  currentUnit.hpp  currentUnitDownloadCentrePageDownloader.hpp  currentUnitMediasAndTranscriptsDownloader.hpp  currentUnitPageUrlAddress.hpp  currentUnitVocabularyAndGrammaReferenceDownloader.hpp  currentUnitVocabularyAndGrammarReferenceDownloader.hpp  downloadCentrePageMediasAndTranscriptsUrlAddressesExtracter.hpp  downloader.hpp  missingFiles.hpp  pause.hpp  supportingTools.hpp
src/source/: currentCourse.cpp  currentUnit.cpp  currentUnitDownloadCentrePageDownloader.cpp  currentUnitMediasAndTranscriptsDownloader.cpp  currentUnitPageUrlAddress.cpp  currentUnitVocabularyAndGrammaReferenceDownloader.cpp  currentUnitVocabularyAndGrammarReferenceDownloader.cpp  downloadCentrePageMediasAndTranscriptsUrlAddressesExtracter.cpp  downloader.cpp  missingFiles.cpp  pause.cpp  supportingTools.cpp
